# opencv-cmake-gradle

./: CMakeLists.txt  build.gradle  基于Android底层NDK开发OpenCV环境搭建.docx
